[package]
name = "file-copier"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "0.49.0"
aws-sdk-s3 = "0.19.0"
lambda_runtime = "0.6.1"
opendal = { version = "0.34.0", features = ["services-sftp"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.85"
serde_yaml = "0.9.21"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
